Fixed bugs with axios in asyncData

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,4 @@
-div.jumbotron.jumbotron-fluid {
+div.jumbotron.jumbotron-fluid, .custom-jumbotron {
   background-image: linear-gradient(rgba(0, 0, 0, 0.4),
     rgba(0, 0, 0, 0.4)), url('../../static/images/header_cover.jpg');
   background-attachment: fixed;
