--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -100,7 +100,7 @@
           div.date-month-year {
             display: inline;
             color: #999;
-            margin-left: 10px;
+            //margin-left: 10px;
             line-height: 3.5rem;
 
             span.placeholder-date {
@@ -109,6 +109,11 @@
           }
         }
 
+      }
+
+      div.search-button button img{
+        width: 25px;
+        filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(199deg) brightness(103%) contrast(103%);
       }
 
 
