--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -66,6 +66,29 @@ $main-background: #FAF9F6;
   }
 }
 
+.link-blink {
+  text-decoration: none;
+  position: relative;
+
+  &:hover:after {
+    opacity: 1;
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
+    opacity: 0;
+    transition: opacity .2s linear;
+  }
+
+
+}
+
 .wrap-image {
   display: block;
   position: relative;
@@ -90,6 +113,7 @@ $main-background: #FAF9F6;
 span.swiper-pagination-bullet.swiper-pagination-bullet-active {
   background: $light-green-primary;
 }
+
 // Pagination Swiper Custom Dot
 div.swiper-pagination {
   span.custom-dot {
